--- a/ZATextFieldView.xib
+++ b/ZATextFieldView.xib
@@ -7,28 +7,32 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="ZATextFieldView">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="mkg-RH-4Tf" userLabel="textField">
-                    <rect key="frame" x="30" y="90" width="260" height="54"/>
+                    <rect key="frame" x="30" y="124" width="260" height="39"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="54" id="v76-eC-1w1"/>
+                        <constraint firstAttribute="height" constant="39" id="v76-eC-1w1"/>
                     </constraints>
                     <color key="textColor" red="0.36078431372549019" green="0.63921568627450975" blue="0.98039215686274506" alpha="1" colorSpace="calibratedRGB"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="29"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="32"/>
                     <textInputTraits key="textInputTraits"/>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="nil" keyPath="placeholder"/>
+                        <userDefinedRuntimeAttribute type="nil" keyPath="text"/>
+                    </userDefinedRuntimeAttributes>
                 </textField>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstAttribute="centerY" secondItem="mkg-RH-4Tf" secondAttribute="centerY" constant="123" id="KqI-EE-gbb"/>
+                <constraint firstAttribute="centerY" secondItem="mkg-RH-4Tf" secondAttribute="centerY" constant="140.5" id="KqI-EE-gbb"/>
                 <constraint firstAttribute="trailing" secondItem="mkg-RH-4Tf" secondAttribute="trailing" constant="30" id="gVh-05-Xpo"/>
                 <constraint firstItem="mkg-RH-4Tf" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="30" id="qjj-c4-UkR"/>
             </constraints>
             <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
-            <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
+            <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
             <connections>
                 <outlet property="textField" destination="mkg-RH-4Tf" id="yQL-So-P7q"/>
             </connections>
