--- a/ZAControl/ZA7LevelView.xib
+++ b/ZAControl/ZA7LevelView.xib
@@ -6,7 +6,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="ZA6LevelView">
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="ZA7LevelView">
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -43,9 +43,9 @@
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <subviews>
                         <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Er9-nZ-wdi">
-                            <rect key="frame" x="18" y="6" width="35" height="35"/>
+                            <rect key="frame" x="17" y="6" width="35" height="35"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <color key="backgroundColor" red="0.93333333330000001" green="0.96078431369999995" blue="0.99607843139999996" alpha="1" colorSpace="calibratedRGB"/>
+                            <color key="backgroundColor" red="0.93333333333333335" green="0.96078431372549022" blue="0.99607843137254903" alpha="1" colorSpace="calibratedRGB"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="35" id="Mo9-Ga-efp"/>
                                 <constraint firstAttribute="height" constant="35" id="Ppk-e9-kCQ"/>
@@ -65,9 +65,9 @@
                             </connections>
                         </button>
                         <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sEX-At-S3f">
-                            <rect key="frame" x="68" y="6" width="35" height="35"/>
+                            <rect key="frame" x="59" y="6" width="35" height="35"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <color key="backgroundColor" red="0.85098039219999999" green="0.91372549020000005" blue="0.99607843139999996" alpha="1" colorSpace="calibratedRGB"/>
+                            <color key="backgroundColor" red="0.85098039215686272" green="0.9137254901960784" blue="0.99607843137254903" alpha="1" colorSpace="calibratedRGB"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="35" id="XNa-eW-jD3"/>
                                 <constraint firstAttribute="height" constant="35" id="jdI-Ws-T8X"/>
@@ -87,9 +87,9 @@
                             </connections>
                         </button>
                         <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="H1F-0I-gqw">
-                            <rect key="frame" x="118" y="6" width="35" height="35"/>
+                            <rect key="frame" x="101" y="6" width="35" height="35"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <color key="backgroundColor" red="0.62745098039215685" green="0.78823529411764703" blue="0.9882352941176471" alpha="1" colorSpace="calibratedRGB"/>
+                            <color key="backgroundColor" red="0.74117647058823533" green="0.85490196078431369" blue="0.99215686274509807" alpha="1" colorSpace="calibratedRGB"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="35" id="E8b-CC-HKm"/>
                                 <constraint firstAttribute="width" constant="35" id="OsT-kB-cPy"/>
@@ -109,9 +109,9 @@
                             </connections>
                         </button>
                         <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rdu-Rg-jte">
-                            <rect key="frame" x="168" y="6" width="35" height="35"/>
+                            <rect key="frame" x="143" y="6" width="35" height="35"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <color key="backgroundColor" red="0.51372549019607838" green="0.72549019607843135" blue="0.98431372549019602" alpha="1" colorSpace="calibratedRGB"/>
+                            <color key="backgroundColor" red="0.62745098039215685" green="0.78823529411764703" blue="0.9882352941176471" alpha="1" colorSpace="calibratedRGB"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="35" id="igk-ho-tIs"/>
                                 <constraint firstAttribute="width" constant="35" id="qPE-j4-Zoq"/>
@@ -131,9 +131,9 @@
                             </connections>
                         </button>
                         <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dxc-NU-Pv0">
-                            <rect key="frame" x="218" y="6" width="35" height="35"/>
+                            <rect key="frame" x="185" y="6" width="35" height="35"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <color key="backgroundColor" red="0.43137254901960786" green="0.67843137254901964" blue="0.98431372549019602" alpha="1" colorSpace="calibratedRGB"/>
+                            <color key="backgroundColor" red="0.51372549019607838" green="0.72549019607843135" blue="0.98431372549019602" alpha="1" colorSpace="calibratedRGB"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="35" id="8e6-Qa-3km"/>
                                 <constraint firstAttribute="height" constant="35" id="lB1-kN-XH0"/>
@@ -153,9 +153,9 @@
                             </connections>
                         </button>
                         <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1U1-59-td3">
-                            <rect key="frame" x="268" y="6" width="35" height="35"/>
+                            <rect key="frame" x="227" y="6" width="35" height="35"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <color key="backgroundColor" red="0.36078431372549019" green="0.63921568627450975" blue="0.98039215686274506" alpha="1" colorSpace="calibratedRGB"/>
+                            <color key="backgroundColor" red="0.43137254901960786" green="0.67843137254901964" blue="0.98431372549019602" alpha="1" colorSpace="calibratedRGB"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="35" id="H3G-gu-bHy"/>
                                 <constraint firstAttribute="height" constant="35" id="XMp-LR-NGU"/>
@@ -174,6 +174,28 @@
                                 <action selector="buttonSelected:" destination="iN0-l3-epB" eventType="touchUpInside" id="l5G-SS-Oee"/>
                             </connections>
                         </button>
+                        <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3lU-je-TxX">
+                            <rect key="frame" x="269" y="6" width="35" height="35"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <color key="backgroundColor" red="0.36078431370000003" green="0.63921568630000003" blue="0.98039215690000003" alpha="1" colorSpace="calibratedRGB"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="35" id="K2Y-PZ-cKF"/>
+                                <constraint firstAttribute="height" constant="35" id="vTH-D0-v9z"/>
+                            </constraints>
+                            <state key="normal">
+                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                            </state>
+                            <state key="selected" backgroundImage="btn_bg_selected"/>
+                            <state key="highlighted" backgroundImage="btn_bg_selected"/>
+                            <userDefinedRuntimeAttributes>
+                                <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                    <real key="value" value="17.5"/>
+                                </userDefinedRuntimeAttribute>
+                            </userDefinedRuntimeAttributes>
+                            <connections>
+                                <action selector="buttonSelected:" destination="iN0-l3-epB" eventType="touchUpInside" id="cgL-Dk-xvh"/>
+                            </connections>
+                        </button>
                         <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="完全不符合" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sBS-mH-sWk">
                             <rect key="frame" x="20" y="56" width="60" height="15"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -188,29 +210,40 @@
                             <color key="textColor" red="0.57254901960000004" green="0.57254901960000004" blue="0.57254901960000004" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
+                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="无所谓" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6wv-8G-hbA">
+                            <rect key="frame" x="142" y="56" width="36" height="15"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                            <color key="textColor" red="0.57254901960000004" green="0.57254901960000004" blue="0.57254901960000004" alpha="1" colorSpace="calibratedRGB"/>
+                            <nil key="highlightedColor"/>
+                        </label>
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstItem="Er9-nZ-wdi" firstAttribute="top" secondItem="D9v-re-VQt" secondAttribute="top" constant="6" id="0wA-5N-qyH"/>
-                        <constraint firstItem="DJK-ot-Oen" firstAttribute="trailing" secondItem="1U1-59-td3" secondAttribute="trailing" id="0yK-Ti-YYY"/>
-                        <constraint firstItem="dxc-NU-Pv0" firstAttribute="leading" secondItem="Rdu-Rg-jte" secondAttribute="trailing" constant="15" id="1Mv-v4-oTi"/>
+                        <constraint firstItem="DJK-ot-Oen" firstAttribute="trailing" secondItem="1U1-59-td3" secondAttribute="trailing" constant="41" id="0yK-Ti-YYY"/>
+                        <constraint firstItem="dxc-NU-Pv0" firstAttribute="leading" secondItem="Rdu-Rg-jte" secondAttribute="trailing" constant="7" id="1Mv-v4-oTi"/>
+                        <constraint firstItem="6wv-8G-hbA" firstAttribute="top" secondItem="Rdu-Rg-jte" secondAttribute="bottom" constant="15" id="1iv-sj-rxg"/>
                         <constraint firstAttribute="height" constant="78" id="26D-26-kx1"/>
-                        <constraint firstItem="sBS-mH-sWk" firstAttribute="leading" secondItem="Er9-nZ-wdi" secondAttribute="leading" constant="2" id="AXX-o4-iz2"/>
+                        <constraint firstItem="sBS-mH-sWk" firstAttribute="leading" secondItem="Er9-nZ-wdi" secondAttribute="leading" constant="3" id="AXX-o4-iz2"/>
+                        <constraint firstItem="3lU-je-TxX" firstAttribute="top" secondItem="1U1-59-td3" secondAttribute="top" id="BaH-dq-zB6"/>
                         <constraint firstItem="sEX-At-S3f" firstAttribute="top" secondItem="H1F-0I-gqw" secondAttribute="top" id="Dd0-Ar-EAU"/>
                         <constraint firstItem="1U1-59-td3" firstAttribute="top" secondItem="dxc-NU-Pv0" secondAttribute="top" id="EOD-iK-sUt"/>
+                        <constraint firstAttribute="centerX" secondItem="6wv-8G-hbA" secondAttribute="centerX" id="Fne-aa-nH3"/>
                         <constraint firstItem="DJK-ot-Oen" firstAttribute="top" secondItem="1U1-59-td3" secondAttribute="bottom" constant="15" id="Lii-87-wYS"/>
-                        <constraint firstItem="1U1-59-td3" firstAttribute="leading" secondItem="dxc-NU-Pv0" secondAttribute="trailing" constant="15" id="Onm-rN-nwR"/>
+                        <constraint firstItem="1U1-59-td3" firstAttribute="leading" secondItem="dxc-NU-Pv0" secondAttribute="trailing" constant="7" id="Onm-rN-nwR"/>
                         <constraint firstItem="Rdu-Rg-jte" firstAttribute="top" secondItem="H1F-0I-gqw" secondAttribute="top" id="TxE-wv-c3A"/>
-                        <constraint firstItem="H1F-0I-gqw" firstAttribute="leading" secondItem="sEX-At-S3f" secondAttribute="trailing" constant="15" id="UBz-KT-Yev"/>
-                        <constraint firstItem="Rdu-Rg-jte" firstAttribute="leading" secondItem="H1F-0I-gqw" secondAttribute="trailing" constant="15" id="X8b-pT-fxa"/>
+                        <constraint firstItem="H1F-0I-gqw" firstAttribute="leading" secondItem="sEX-At-S3f" secondAttribute="trailing" constant="7" id="UBz-KT-Yev"/>
+                        <constraint firstItem="Rdu-Rg-jte" firstAttribute="leading" secondItem="H1F-0I-gqw" secondAttribute="trailing" constant="7" id="X8b-pT-fxa"/>
                         <constraint firstItem="sBS-mH-sWk" firstAttribute="top" secondItem="Er9-nZ-wdi" secondAttribute="bottom" constant="15" id="XJJ-wy-mVL"/>
-                        <constraint firstAttribute="trailing" secondItem="1U1-59-td3" secondAttribute="trailing" constant="17" id="Xha-Ul-Vpw"/>
-                        <constraint firstItem="sEX-At-S3f" firstAttribute="leading" secondItem="Er9-nZ-wdi" secondAttribute="trailing" constant="15" id="bLN-L0-fAa"/>
-                        <constraint firstItem="Er9-nZ-wdi" firstAttribute="leading" secondItem="D9v-re-VQt" secondAttribute="leading" constant="18" id="cRV-LE-Nt8"/>
+                        <constraint firstAttribute="trailing" secondItem="1U1-59-td3" secondAttribute="trailing" constant="58" id="Xha-Ul-Vpw"/>
+                        <constraint firstItem="sEX-At-S3f" firstAttribute="leading" secondItem="Er9-nZ-wdi" secondAttribute="trailing" constant="7" id="bLN-L0-fAa"/>
+                        <constraint firstItem="Er9-nZ-wdi" firstAttribute="leading" secondItem="D9v-re-VQt" secondAttribute="leading" constant="17" id="cRV-LE-Nt8"/>
                         <constraint firstItem="1U1-59-td3" firstAttribute="top" secondItem="D9v-re-VQt" secondAttribute="top" constant="6" id="fOa-s8-ucQ"/>
                         <constraint firstItem="Rdu-Rg-jte" firstAttribute="top" secondItem="dxc-NU-Pv0" secondAttribute="top" id="qSG-5I-P4D"/>
                         <constraint firstAttribute="width" constant="320" id="r23-BC-Y9Z"/>
                         <constraint firstItem="sEX-At-S3f" firstAttribute="top" secondItem="Er9-nZ-wdi" secondAttribute="top" id="vXE-yK-76C"/>
+                        <constraint firstItem="3lU-je-TxX" firstAttribute="leading" secondItem="1U1-59-td3" secondAttribute="trailing" constant="7" id="zyr-n6-7ag"/>
                     </constraints>
                 </view>
             </subviews>
@@ -236,6 +269,7 @@
                 <outletCollection property="buttons" destination="Rdu-Rg-jte" id="uMM-Fd-crx"/>
                 <outletCollection property="buttons" destination="dxc-NU-Pv0" id="9kx-SM-usl"/>
                 <outletCollection property="buttons" destination="1U1-59-td3" id="LaO-fM-nnO"/>
+                <outletCollection property="buttons" destination="3lU-je-TxX" id="zQL-dr-t5r"/>
             </connections>
         </view>
     </objects>
