--- a/ZAControl/ZAJudgeView.xib
+++ b/ZAControl/ZAJudgeView.xib
@@ -24,6 +24,7 @@
                     <rect key="frame" x="17" y="100" width="287" height="1"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <constraints>
+                        <constraint firstAttribute="height" constant="1" id="S8J-5Z-ScF"/>
                         <constraint firstAttribute="width" constant="287" id="pJc-tF-8gk"/>
                     </constraints>
                 </imageView>
